[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-securefiles"
version = "0.1.0"
description = "Secure, efficient file downloads for Django using nginx internal redirects."
readme = "README.md"
requires-python = ">=3.10"
license="BSD-3-Clause"
authors = [
  { name="Michael Heumann", email="michael@vilanet.de" },
]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "Django>=3.2",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/django-securefiles"
"Bug Tracker" = "https://github.com/yourusername/django-securefiles/issues"

